Add styling to buttons and beginnings of cards

--- a/_patterns/buttons/light.html
+++ b/_patterns/buttons/light.html
@@ -1,1 +1,3 @@
-<a class="btn btn-light" href="#">Sign up</a>
+<div class="btn-border-light">
+  <a class="btn btn-light" href="#">Sign up</a>
+</div>
