--- a/_patterns/cards/shop-radios.html
+++ b/_patterns/cards/shop-radios.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="square-card">
   <img class="img-flex square-card-img" src="/images/radio.jpg" alt="">
   <div class="square-card-content">
     {% pattern buttons/shop-radios %}
