Add icons and styling to the buttons

--- a/_patterns/buttons/light.html
+++ b/_patterns/buttons/light.html
@@ -1,3 +1,8 @@
 <div class="btn-border-light">
-  <a class="btn btn-light" href="#">Sign up</a>
+  <a class="btn btn-light icon-link" href="#">
+    <span class="icon-label push-r-1-4">Sign Up</span>
+    <i class="icon i-20">
+      <svg><use xlink:href="/images/icons.svg#sign-up-arrow" /></svg>
+    </i>
+  </a>
 </div>
