--- a/_patterns/banners/home-banner.html
+++ b/_patterns/banners/home-banner.html
@@ -1,6 +1,6 @@
 <div class="home-banner">
   <div class="home-banner-content">
-    <h1>Extra 20% off sale items</h1>
+    <h1 class="home-banner-type">Extra 20% off sale items</h1>
     {% pattern buttons/basic %}
   </div>
 </div>
