--- a/_patterns/buttons/light.html
+++ b/_patterns/buttons/light.html
@@ -1,8 +1,8 @@
 <div class="btn-border-light">
-  <a class="btn btn-light icon-link" href="#">
+  <button class="btn btn-light icon-link" type="submit">
     <span class="icon-label push-r-1-4">Sign Up</span>
-    <i class="icon i-16">
+    <i class="icon i-16 arrow-icon">
       <svg><use xlink:href="/images/icons.svg#sign-up-arrow" /></svg>
     </i>
-  </a>
+  </button>
 </div>
