Add and remove form fields

--- a/_patterns/forms/select-input.html
+++ b/_patterns/forms/select-input.html
@@ -2,7 +2,7 @@
   <h6 class="push-1-2">
     <label for="country">Country</label>
   </h6>
-  <select id="country" name="country" class="form-field">
+  <select id="country" name="country" class="form-item form-field">
     <option label="country"></option>
     <option>Canada</option>
     <option>United States of America</option>
