--- a/_patterns/forms/text-input.html
+++ b/_patterns/forms/text-input.html
@@ -2,5 +2,5 @@
   <h6 class="push-1-2">
     <label for="email">E-mail address</label>
   </h6>
-  <input type="email" id="email" placeholder="bruce.wayne@batman.com">
+  <input class="form-item" type="email" id="email" placeholder="bruce.wayne@batman.com">
 </div>
