Add error messages to the input fields

--- a/_patterns/forms/multiple-field-input.html
+++ b/_patterns/forms/multiple-field-input.html
@@ -2,8 +2,12 @@
   <h6 class="push-1-2">
     <label for="date">Expiry Date</label>
   </h6>
-  <div class="grid">
-    <input class="xs-1-2 s-1-2 m-1-2 l-1-2 xl-1-2 form-item exp-date push-r" type="number" id="month" placeholder="mm">
-    <input class="xs-1-2 s-1-2 m-1-2 l-1-2 xl-1-2 form-item exp-date" type="number" id="year" placeholder="yy">
+  <div class="grid push-1-2">
+    <input class="xs-1-2 s-1-2 m-1-2 l-1-2 xl-1-2 form-item exp-date push-r" type="number" id="month" placeholder="mm" required aria-describedby="month-error">
+    <input class="xs-1-2 s-1-2 m-1-2 l-1-2 xl-1-2 form-item exp-date" type="number" id="year" placeholder="yy" required aria-describedby="year-error">
   </div>
+  <p class="error-message milli island-1-4 push-0 unit" id="agree-error">
+    <i class="icon i-16"><svg><use xlink:href="/images/icons.svg#error" /></svg></i>
+    <span class="icon-label error-label">Please enter a valid expiry date</span>
+  </p>
 </div>
