--- a/_patterns/forms/select-input.html
+++ b/_patterns/forms/select-input.html
@@ -2,10 +2,14 @@
   <h6 class="push-1-2">
     <label for="country">Country</label>
   </h6>
-  <select id="country" name="country" class="form-item form-field">
+  <select id="country" name="country" class="form-item form-field push-1-2">
     <option label="country"></option>
     <option>Canada</option>
     <option>United States of America</option>
     <option>Australia</option>
   </select>
+  <p class="error-message milli island-1-4 push-0 unit xs-1 s-1 m-1 l-1 xl-1 push-1-2" id="selection-error">
+    <i class="icon i-16"><svg><use xlink:href="/images/icons.svg#error" /></svg></i>
+    <span class="icon-label error-label">Please select an option from the above drop down menu</span>
+  </p>
 </div>
