--- a/_patterns/forms/text-input.html
+++ b/_patterns/forms/text-input.html
@@ -2,5 +2,9 @@
   <h6 class="push-1-2">
     <label for="email">E-mail address</label>
   </h6>
-  <input class="form-item" type="email" id="email" placeholder="bruce.wayne@batman.com">
+  <input class="form-item push-1-2" type="email" id="email" placeholder="bruce.wayne@batman.com">
+  <p class="error-message milli island-1-4 push-0 unit xs-1 s-1 m-1 l-1 xl-1 push-1-2" id="text-error">
+    <i class="icon i-16"><svg><use xlink:href="/images/icons.svg#error" /></svg></i>
+    <span class="icon-label error-label">Please fill out the above field</span>
+  </p>
 </div>
