--- a/_patterns/forms/sign-up-input.html
+++ b/_patterns/forms/sign-up-input.html
@@ -2,8 +2,12 @@
   <h6 class="unit xs-1 s-1 m-1 l-1 xl-1 push-1-2">
     <label for="email-promo">Sign up for emails</label>
   </h6>
-  <input class="unit xs-1 s-2-3 m-2-3 l-2-3 xl-2-3" type="email" id="email-promo" placeholder="bruce.wayne@batman.com">
-  <div class="unit xs-1 s-1-3 m-1-3 l-1-3 xl-1-3">
+  <input class="push-1-2 unit xs-1 s-1 m-1 l-1 xl-1 sign-up" type="email" id="email-promo" placeholder="bruce.wayne@batman.com" required aria-describedby="email-error">
+  <p class="error-message milli island-1-4 push-0 unit xs-1 s-1 m-1 l-1 xl-1 push-1-2" id="email-error">
+    <i class="icon i-16"><svg><use xlink:href="/images/icons.svg#error" /></svg></i>
+    <span class="icon-label error-label">Please enter a valid email address</span>
+  </p>
+  <div class="unit xs-1 s-1 m-1 l-1 xl-1">
     {% pattern buttons/light %}
   </div>
 </div>
