Make the card clickable

--- a/_patterns/cards/product.html
+++ b/_patterns/cards/product.html
@@ -1,9 +1,13 @@
 <div class="product-card">
-  <img class="img-flex product-card-img" src="/images/product-record-player.jpg" alt="">
+  <a class="icon-link" href="#">
+    <img class="img-flex product-card-img" src="/images/product-record-player.jpg" alt="">
+  </a>
   <div class="product-card-content">
-    <dl>
-      <dt>Crosley Record Player</dt>
-      <dd>$95.00</dd>
-    </dl>
+    <a class="icon-link" href="#">
+      <dl>
+        <dt>Crosley Record Player</dt>
+        <dd>$95.00</dd>
+      </dl>
+    </a>
   </div>
 </div>
