Add form requirements

--- a/_patterns/forms/number-input.html
+++ b/_patterns/forms/number-input.html
@@ -2,7 +2,7 @@
   <h6 class="push-1-2">
     <label for="phone">Phone Number</label>
   </h6>
-  <input class="form-item push-1-4" type="tel" id="phone">
+  <input class="form-item push-1-4" type="tel" id="phone" required aria-describedby="phone-error">
   <p class="error-message milli island-1-4 push-0" id="phone-error">
     <i class="icon i-16"><svg><use xlink:href="/images/icons.svg#error" /></svg></i>
     <span class="icon-label error-label">Please enter a valid phone number</span>
