--- a/_patterns/navigation/footer-nav.html
+++ b/_patterns/navigation/footer-nav.html
@@ -1,38 +1,53 @@
 <footer class="">
   <nav class="footer-nav wrapper pad-t">
     <ul class="list-group grid">
-      <div class="unit xs-1-2 s-1-4 m-1-4 l-1-4 xl-1-4">
+      <div class="unit xs-1-2 s-1-4 m-1-3 l-1-4 xl-1-4 gutter-1-2 push-2">
         <li class="">
-          <a class="icon-link" href="#">About</a>
+          <a class="footer-link icon-link" href="#">About</a>
         </li>
         <li class="">
-          <a class="icon-link" href="#">Contact</a>
+          <a class="footer-link icon-link" href="#">Contact</a>
         </li>
         <li class="">
-          <a class="icon-link" href="#">Shipping/Returns</a>
-        </li>
-      </div>
-      <div class="unit xs-1-2 s-1-4 m-1-4 l-1-4 xl-1-4">
-        <li class="">
-          <a class="icon-link" href="#">Careers</a>
-        </li>
-        <li class="">
-          <a class="icon-link" href="#">Privacy</a>
+          <a class="footer-link icon-link" href="#">Shipping/Returns</a>
         </li>
       </div>
-      <div class="unit xs-1 s-1 m-1-4 l-1-4 xl-1-4">
+      <div class="unit xs-1-2 s-1-4 m-1-3 l-1-4 xl-1-4 gutter-1-2 push-2">
+        <li class="">
+          <a class="footer-link icon-link" href="#">Careers</a>
+        </li>
+        <li class="">
+          <a class="footer-link icon-link" href="#">Privacy</a>
+        </li>
+      </div>
+      <div class="unit xs-1 s-1 m-1-3 l-1-4 xl-1-4 gutter-1-2 push-2">
         <li class="">
           {% pattern forms/sign-up-input %}
         </li>
       </div>
-      <div class="unit xs-1 s-1 m-1-4 l-1-4 xl-1-4">
+      <div class="unit xs-1 s-1 m-1 l-1-4 xl-1-4 list-group-inline text-center push">
         <li class="">
           <a class="icon-link" href="#">
-            <i class="icon i-24 facebook-icon">
+            <i class="icon i-48 facebook-icon">
               <svg><use xlink:href="/images/icons.svg#facebook-social" /></svg>
             </i>
           </a>
         </li>
+        <li class="">
+          <a class="icon-link" href="#">
+            <i class="icon i-48 facebook-icon">
+              <svg><use xlink:href="/images/icons.svg#twitter-social" /></svg>
+            </i>
+          </a>
+        </li>
+        <li class="">
+          <a class="icon-link" href="#">
+            <i class="icon i-48 facebook-icon">
+              <svg><use xlink:href="/images/icons.svg#instagram-social" /></svg>
+            </i>
+          </a>
+        </li>
+      </div>
     </ul>
   </nav>
 </footer>
