Add hover animations to the social media icons

--- a/_patterns/navigation/footer-nav.html
+++ b/_patterns/navigation/footer-nav.html
@@ -34,15 +34,15 @@
           </a>
         </li>
         <li class="">
-          <a class="icon-link" href="#">
-            <i class="icon i-48 facebook-icon">
+          <a class="icon-link island" href="#">
+            <i class="icon i-48 twitter-icon">
               <svg><use xlink:href="/images/icons.svg#twitter-social" /></svg>
             </i>
           </a>
         </li>
         <li class="">
           <a class="icon-link" href="#">
-            <i class="icon i-48 facebook-icon">
+            <i class="icon i-48 instagram-icon">
               <svg><use xlink:href="/images/icons.svg#instagram-social" /></svg>
             </i>
           </a>
