Add the page navigation

--- a/_patterns/navigation/footer-nav.html
+++ b/_patterns/navigation/footer-nav.html
@@ -25,28 +25,33 @@
           {% pattern forms/sign-up-input %}
         </li>
       </div>
-      <div class="unit xs-1 s-1 m-1 l-1-4 xl-1-4 list-group-inline text-center push">
-        <li class="">
-          <a class="icon-link" href="#">
-            <i class="icon i-48 facebook-icon">
-              <svg><use xlink:href="/images/icons.svg#facebook-social" /></svg>
-            </i>
-          </a>
+      <div class="unit xs-1 s-1 m-1 l-1-4 xl-1-4 text-center push">
+        <li class="push-1-2">
+          <h6 class="push-0">Follow us on social media!</h6>
         </li>
-        <li class="">
-          <a class="icon-link island" href="#">
-            <i class="icon i-48 twitter-icon">
-              <svg><use xlink:href="/images/icons.svg#twitter-social" /></svg>
-            </i>
-          </a>
-        </li>
-        <li class="">
-          <a class="icon-link" href="#">
-            <i class="icon i-48 instagram-icon">
-              <svg><use xlink:href="/images/icons.svg#instagram-social" /></svg>
-            </i>
-          </a>
-        </li>
+        <div class="list-group-inline">
+          <li class="">
+            <a class="icon-link" href="#">
+              <i class="icon i-48 facebook-icon">
+                <svg><use xlink:href="/images/icons.svg#facebook-social" /></svg>
+              </i>
+            </a>
+          </li>
+          <li class="">
+            <a class="icon-link island" href="#">
+              <i class="icon i-48 twitter-icon">
+                <svg><use xlink:href="/images/icons.svg#twitter-social" /></svg>
+              </i>
+            </a>
+          </li>
+          <li class="">
+            <a class="icon-link" href="#">
+              <i class="icon i-48 instagram-icon">
+                <svg><use xlink:href="/images/icons.svg#instagram-social" /></svg>
+              </i>
+            </a>
+          </li>
+        </div>
       </div>
     </ul>
   </nav>
