Adjust styling of cards

--- a/_patterns/navigation/page-nav.html
+++ b/_patterns/navigation/page-nav.html
@@ -9,27 +9,27 @@
     </li>
     <li class="push-r">
       <a class="page-number-link icon-link" href="#">
-        <span class="icon-label push-r-1-4">1</span>
+        <span class="icon-label">1</span>
       </a>
     </li>
     <li class="push-r">
       <a class="page-number-link icon-link" href="#">
-        <span class="icon-label push-r-1-4">2</span>
+        <span class="icon-label">2</span>
       </a>
     </li>
     <li class="push-r">
       <a class="page-number-link icon-link" href="#">
-        <span class="icon-label push-r-1-4">3</span>
+        <span class="icon-label">3</span>
       </a>
     </li>
     <li class="push-r">
       <a class="page-number-link icon-link" href="#">
-        <span class="icon-label push-r-1-4">4</span>
+        <span class="icon-label">4</span>
       </a>
     </li>
     <li class="push-r">
       <a class="page-number-link icon-link" href="#">
-        <span class="icon-label push-r-1-4">5</span>
+        <span class="icon-label">5</span>
       </a>
     </li>
     <li class="">
