--- a/_patterns/cards/product-category.html
+++ b/_patterns/cards/product-category.html
@@ -1,6 +1,8 @@
-<div class="card">
-  <img class="img-flex card-img" src="/images/retro-radio.jpg" alt="">
-  <div class="card-img-content">
-    <h4>Retro electronics</h4>
+<div class="grid">
+  <div class="card unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+    <img class="img-flex card-img" src="/images/retro-radio.jpg" alt="">
+    <div class="card-img-content">
+      <h4 class="tena">Retro electronics</h4>
+    </div>
   </div>
 </div>
