--- a/_patterns/cards/shop.html
+++ b/_patterns/cards/shop.html
@@ -1,6 +1,14 @@
-<div class="square-card">
-  <img class="img-flex square-card-img" src="/images/polaroid.jpg" alt="">
-  <div class="square-card-content">
-    {% pattern buttons/basic %}
+<div class="grid">
+  <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3">
+    <div class="square-card relative">
+      <a class="crop icon-link hover-box" href="#">
+        <div class="embed embed-1by1">
+          <img class="hover-img embed-item img-flex square-card-img" src="/images/polaroid.jpg" alt="">
+        </div>
+        <div class="square-card-content pin-cb">
+          {% pattern buttons/basic %}
+        </div>
+      </a>
+    </div>
   </div>
 </div>
