Edit the category card

--- a/_patterns/cards/product-category.html
+++ b/_patterns/cards/product-category.html
@@ -1,8 +1,12 @@
 <div class="grid">
   <div class="card unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-    <img class="img-flex card-img" src="/images/retro-radio.jpg" alt="">
-    <div class="card-img-content">
-      <h4 class="tena">Retro electronics</h4>
-    </div>
+    <a class="crop hover-box icon-link" href="#">
+      <div class="embed embed-golden">
+        <img class="embed-item hover-img img-flex card-img" src="/images/retro-radio.jpg" alt="">
+        <div class="card-img-content">
+          <h4 class="tena">Retro electronics</h4>
+        </div>
+      </div>
+    </a>
   </div>
 </div>
