--- a/_patterns/cards/product-category.html
+++ b/_patterns/cards/product-category.html
@@ -1,9 +1,9 @@
 <div class="grid">
   <div class="card unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
     <a class="crop hover-box icon-link" href="#">
-      <div class="embed embed-golden">
+      <div class="embed embed-golden relative">
         <img class="embed-item hover-img img-flex card-img" src="/images/retro-radio.jpg" alt="">
-        <div class="card-img-content">
+        <div class="card-img-content pin-lc">
           <h4 class="tena">Retro electronics</h4>
         </div>
       </div>
