--- a/_patterns/cards/similar-product.html
+++ b/_patterns/cards/similar-product.html
@@ -1,6 +1,12 @@
-<div class="similar-card">
-  <img class="img-flex similar-card-img" src="/images/product-camera.jpg" alt="">
-  <div class="similar-card-content">
-    {% pattern buttons/ghost %}
+<div class="grid">
+  <div class="unit xs-1-2 s-1-2 m-1-4 l-1-4 xl-1-4">
+    <a class="crop hover-box icon-link" href="#">
+      <div class="embed embed-iso216 relative">
+        <img class="hover-img embed-item img-flex similar-card-img" src="/images/product-camera.jpg" alt="">
+        <div class="pin-cb similar-card-content">
+          {% pattern buttons/ghost %}
+        </div>
+      </div>
+    </a>
   </div>
 </div>
