--- a/_patterns/navigation/section-nav.html
+++ b/_patterns/navigation/section-nav.html
@@ -1,5 +1,5 @@
-<nav class="">
-  <ol class="list-group">
+<nav class="grid category-nav">
+  <ol class="unit xs-1 s-1 m-1-3 l-1-4 xl-1-4 list-group">
     <li class="push-1-4">
       <a class="icon-link text-upper" href="#"><h6 class="push-0">Electronics</h6></a>
     </li>
