Change button font size

--- a/_patterns/banners/home-banner.html
+++ b/_patterns/banners/home-banner.html
@@ -1,5 +1,5 @@
-<div class="home-banner">
-  <div class="home-banner-content">
+<div class="home-banner relative">
+  <div class="home-banner-content pin-lc">
     <h1 class="home-banner-type">Extra 20% off sale items</h1>
     {% pattern buttons/basic %}
   </div>
