--- a/_patterns/header/header-nav.html
+++ b/_patterns/header/header-nav.html
@@ -1,24 +1,24 @@
 <header class="">
   <nav class="header-nav wrapper">
-    <ul class="list-nav list-group-inline text-center push-0 grid">
-      <li class="unit xs-1-2 s-1-2 m-1-6 l-1-6 xl-1-6">
-        <a class="header-link icon-link" href="#"><h4>Electronics</h4></a>
+    <ul class="list-nav list-group-inline text-center push-0 grid grid-middle">
+      <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
+        <a class="header-link icon-link" href="#"><h4 class="tenamega">Electronics</h4></a>
       </li>
-      <li class="unit xs-1-2 s-1-2 m-1-6 l-1-6 xl-1-6">
-        <a class="header-link icon-link" href="#"><h4>Music</h4></a>
+      <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
+        <a class="header-link icon-link" href="#"><h4 class="tenamega">Music</h4></a>
       </li>
-      <li class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3">
+      <li class="unit xs-1 s-1 m-1 l-1-3 xl-1-3">
         <a class="header-link icon-link" href="#">
           <i class="icon i-256 logo">
             <img src="/images/logo-256.svg" alt="Logo of The Retro brand">
           </i>
         </a>
       </li>
-      <li class="unit xs-1-2 s-1-2 m-1-6 l-1-6 xl-1-6">
-        <a class="header-link icon-link" href="#"><h4>Movies</h4></a>
+      <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
+        <a class="header-link icon-link" href="#"><h4 class="tenamega">Movies</h4></a>
       </li>
-      <li class="unit xs-1-2 s-1-2 m-1-6 l-1-6 xl-1-6">
-        <a class="header-link icon-link" href="#"><h4>Apparel</h4></a>
+      <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
+        <a class="header-link icon-link" href="#"><h4 class="tenamega">Apparel</h4></a>
       </li>
     </ul>
   </nav>
