--- a/_patterns/header/header-nav.html
+++ b/_patterns/header/header-nav.html
@@ -3,12 +3,22 @@
     <ul class="list-nav list-group-inline text-center push-0 grid grid-middle">
       <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
         <a class="header-link icon-link" href="#"><h4 class="tenamega">Electronics</h4></a>
+        <a class="icon-link header-icon" href="#">
+          <i class="icon i-64 electronics-icon">
+            <svg><use xlink:href="/images/icons.svg#electronics" /></svg>
+          </i>
+        </a>
       </li>
       <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
         <a class="header-link icon-link" href="#"><h4 class="tenamega">Music</h4></a>
+        <a class="icon-link header-icon" href="#">
+          <i class="icon i-64 music-icon">
+          <svg><use xlink:href="/images/icons.svg#music" /></svg>
+          </i>
+        </a>
       </li>
       <li class="unit xs-1 s-1 m-1 l-1-3 xl-1-3">
-        <a class="header-link icon-link" href="#">
+        <a class="logo-link icon-link" href="#">
           <i class="icon i-256 logo">
             <img src="/images/logo-256.svg" alt="Logo of The Retro brand">
           </i>
@@ -16,9 +26,19 @@
       </li>
       <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
         <a class="header-link icon-link" href="#"><h4 class="tenamega">Movies</h4></a>
+        <a class="icon-link header-icon" href="#">
+          <i class="icon i-64 movies-icon">
+            <svg><use xlink:href="/images/icons.svg#movies" /></svg>
+          </i>
+        </a>
       </li>
       <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
         <a class="header-link icon-link" href="#"><h4 class="tenamega">Apparel</h4></a>
+        <a class="icon-link header-icon" href="#">
+          <i class="icon i-64 apparel-icon">
+            <svg><use xlink:href="/images/icons.svg#apparel" /></svg>
+          </i>
+        </a>
       </li>
     </ul>
   </nav>
