Adjust icons and header elements

--- a/_patterns/header/header-nav.html
+++ b/_patterns/header/header-nav.html
@@ -1,45 +1,51 @@
 <header class="">
-  <nav class="header-nav wrapper">
-    <ul class="list-nav list-group-inline text-center push-0 grid grid-middle">
-      <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
-        <a class="header-link icon-link" href="#"><h4 class="tenamega">Electronics</h4></a>
-        <a class="icon-link header-icon" href="#">
-          <i class="icon i-64 electronics-icon">
-            <svg><use xlink:href="/images/icons.svg#electronics" /></svg>
-          </i>
-        </a>
-      </li>
-      <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
-        <a class="header-link icon-link" href="#"><h4 class="tenamega">Music</h4></a>
-        <a class="icon-link header-icon" href="#">
-          <i class="icon i-64 music-icon">
-          <svg><use xlink:href="/images/icons.svg#music" /></svg>
-          </i>
-        </a>
-      </li>
-      <li class="unit xs-1 s-1 m-1 l-1-3 xl-1-3">
-        <a class="logo-link icon-link" href="#">
-          <i class="icon i-256 logo">
-            <img src="/images/logo-256.svg" alt="Logo of The Retro brand">
-          </i>
-        </a>
-      </li>
-      <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
-        <a class="header-link icon-link" href="#"><h4 class="tenamega">Movies</h4></a>
-        <a class="icon-link header-icon" href="#">
-          <i class="icon i-64 movies-icon">
-            <svg><use xlink:href="/images/icons.svg#movies" /></svg>
-          </i>
-        </a>
-      </li>
-      <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
-        <a class="header-link icon-link" href="#"><h4 class="tenamega">Apparel</h4></a>
-        <a class="icon-link header-icon" href="#">
-          <i class="icon i-64 apparel-icon">
-            <svg><use xlink:href="/images/icons.svg#apparel" /></svg>
-          </i>
-        </a>
-      </li>
-    </ul>
+  <nav class="header-nav wrapper relative">
+    <div class="relative">
+      <ul class="list-nav list-group-inline text-center push-0 grid grid-middle">
+        <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
+          <a class="header-link icon-link" href="#"><h4 class="push-0 tenakilo">Electronics</h4></a>
+          <a class="icon-link header-icon grid grid-middle" href="#">
+            <i class="icon i-96 electronics-icon unit xs-1 s-1 m-1-2">
+              <svg><use xlink:href="/images/icons.svg#electronics" /></svg>
+            </i>
+            <span class="icon-label unit xs-1 s-1 m-1-2">Electronics</span>
+          </a>
+        </li>
+        <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
+          <a class="header-link icon-link" href="#"><h4 class="push-0 tenakilo">Music</h4></a>
+          <a class="icon-link header-icon grid grid-middle" href="#">
+            <i class="icon i-96 music-icon unit xs-1 s-1 m-1-2">
+            <svg><use xlink:href="/images/icons.svg#music" /></svg>
+            </i>
+            <span class="icon-label unit xs-1 s-1 m-1-2">Music</span>
+          </a>
+        </li>
+        <li class="unit xs-1 s-1 m-1 l-1-3 xl-1-3">
+        </li>
+        <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
+          <a class="header-link icon-link" href="#"><h4 class="push-0 tenakilo">Movies</h4></a>
+          <a class="icon-link header-icon grid grid-middle" href="#">
+            <i class="icon i-96 movies-icon unit xs-1 s-1 m-1-2">
+              <svg><use xlink:href="/images/icons.svg#movies" /></svg>
+            </i>
+            <span class="icon-label unit xs-1 s-1 m-1-2">Movies</span>
+          </a>
+        </li>
+        <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
+          <a class="header-link icon-link" href="#"><h4 class="push-0 tenakilo">Apparel</h4></a>
+          <a class="icon-link header-icon grid grid-middle" href="#">
+            <i class="icon i-96 apparel-icon unit xs-1 s-1 m-1-2">
+              <svg><use xlink:href="/images/icons.svg#apparel" /></svg>
+            </i>
+            <span class="icon-label unit xs-1 s-1 m-1-2">Apparel</span>
+          </a>
+        </li>
+      </ul>
+      <a class="logo-link icon-link pin-ct" href="#">
+        <i class="icon i-256 logo">
+          <img src="/images/logo-256.svg" alt="Logo of The Retro brand">
+        </i>
+      </a>
+    </div>
   </nav>
 </header>
