--- a/_patterns/header/header-nav.html
+++ b/_patterns/header/header-nav.html
@@ -8,16 +8,16 @@
             <i class="icon i-96 electronics-icon unit xs-1 s-1 m-1-2">
               <svg><use xlink:href="/images/icons.svg#electronics" /></svg>
             </i>
-            <span class="icon-label unit xs-1 s-1 m-1-2">Electronics</span>
+            <span class="left-label icon-label unit xs-1 s-1 m-1-2">Electronics</span>
           </a>
         </li>
         <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
           <a class="header-link icon-link" href="#"><h4 class="push-0 tenakilo">Music</h4></a>
           <a class="icon-link header-icon grid grid-middle" href="#">
-            <i class="icon i-96 music-icon unit xs-1 s-1 m-1-2">
+            <i class="icon i-96 music-icon unit xs-1 s-1 m-1-2 unit-push-m-1-2">
             <svg><use xlink:href="/images/icons.svg#music" /></svg>
             </i>
-            <span class="icon-label unit xs-1 s-1 m-1-2">Music</span>
+            <span class="icon-label unit xs-1 s-1 m-1-2 right-label unit-pull-m-1-2">Music</span>
           </a>
         </li>
         <li class="unit xs-1 s-1 m-1 l-1-3 xl-1-3">
@@ -28,16 +28,16 @@
             <i class="icon i-96 movies-icon unit xs-1 s-1 m-1-2">
               <svg><use xlink:href="/images/icons.svg#movies" /></svg>
             </i>
-            <span class="icon-label unit xs-1 s-1 m-1-2">Movies</span>
+            <span class="left-label icon-label unit xs-1 s-1 m-1-2">Movies</span>
           </a>
         </li>
         <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
           <a class="header-link icon-link" href="#"><h4 class="push-0 tenakilo">Apparel</h4></a>
           <a class="icon-link header-icon grid grid-middle" href="#">
-            <i class="icon i-96 apparel-icon unit xs-1 s-1 m-1-2">
+            <i class="icon i-96 apparel-icon unit xs-1 s-1 m-1-2 unit-push-m-1-2">
               <svg><use xlink:href="/images/icons.svg#apparel" /></svg>
             </i>
-            <span class="icon-label unit xs-1 s-1 m-1-2">Apparel</span>
+            <span class="icon-label unit xs-1 s-1 m-1-2 right-label unit-pull-m-1-2">Apparel</span>
           </a>
         </li>
       </ul>
