--- a/_patterns/header/header-nav.html
+++ b/_patterns/header/header-nav.html
@@ -3,7 +3,7 @@
     <div class="relative">
       <ul class="list-nav list-group-inline text-center push-0 grid grid-middle">
         <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
-          <a class="header-link icon-link" href="#"><h4 class="push-0 tenakilo">Electronics</h4></a>
+          <a class="header-link icon-link" href="#"><h4 class="link push-0 tenakilo">Electronics</h4></a>
           <a class="icon-link header-icon grid grid-middle" href="#">
             <i class="icon i-96 electronics-icon unit xs-1 s-1 m-1-2">
               <svg><use xlink:href="/images/icons.svg#electronics" /></svg>
@@ -12,7 +12,7 @@
           </a>
         </li>
         <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
-          <a class="header-link icon-link" href="#"><h4 class="push-0 tenakilo">Music</h4></a>
+          <a class="header-link icon-link" href="#"><h4 class="link push-0 tenakilo">Music</h4></a>
           <a class="icon-link header-icon grid grid-middle" href="#">
             <i class="icon i-96 music-icon unit xs-1 s-1 m-1-2 unit-push-m-1-2">
             <svg><use xlink:href="/images/icons.svg#music" /></svg>
@@ -23,7 +23,7 @@
         <li class="unit xs-1 s-1 m-1 l-1-3 xl-1-3">
         </li>
         <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
-          <a class="header-link icon-link" href="#"><h4 class="push-0 tenakilo">Movies</h4></a>
+          <a class="header-link icon-link" href="#"><h4 class="link push-0 tenakilo">Movies</h4></a>
           <a class="icon-link header-icon grid grid-middle" href="#">
             <i class="icon i-96 movies-icon unit xs-1 s-1 m-1-2">
               <svg><use xlink:href="/images/icons.svg#movies" /></svg>
@@ -32,7 +32,7 @@
           </a>
         </li>
         <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
-          <a class="header-link icon-link" href="#"><h4 class="push-0 tenakilo">Apparel</h4></a>
+          <a class="header-link icon-link" href="#"><h4 class="link push-0 tenakilo">Apparel</h4></a>
           <a class="icon-link header-icon grid grid-middle" href="#">
             <i class="icon i-96 apparel-icon unit xs-1 s-1 m-1-2 unit-push-m-1-2">
               <svg><use xlink:href="/images/icons.svg#apparel" /></svg>
