--- a/_patterns/buttons/light.html
+++ b/_patterns/buttons/light.html
@@ -1,8 +1,8 @@
 <div class="btn-border-light">
-  <button class="btn btn-light icon-link" type="submit">
-    <span class="mega icon-label push-r-1-4">Sign Up</span>
+  <a class="btn btn-light mega" href="#">
+    <span class="mega push-r-1-4">Sign Up</span>
     <i class="icon i-16 arrow-icon">
       <svg><use xlink:href="/images/icons.svg#right-arrow" /></svg>
     </i>
-  </button>
+  </a>
 </div>
