--- a/_patterns/buttons/search.html
+++ b/_patterns/buttons/search.html
@@ -1,5 +1,5 @@
 <div class="btn-border-light">
-  <button class="btn btn-light icon-link" type="submit">
-    <span class="mega icon-label push-r-1-4">Search</span>
-  </button>
+  <a class="mega btn btn-light" href="#">
+    Search
+  </a>
 </div>
