Add styling to elements

--- a/_patterns/banners/product-page-banner.html
+++ b/_patterns/banners/product-page-banner.html
@@ -1,7 +1,7 @@
-<div class="product-banner">
+<div class="product-banner relative">
   <img class="img-flex banner-img" src="/images/product-page-banner.jpg" alt="">
-  <div class="product-banner-content">
-    <h2>Buy 1 get 1 free</h2>
-    <h3>Cassettes</h3>
-  </div>
+  <a class="product-banner-content pin-cb text-center icon-link" href="#">
+    <h2 class="tenamega push-0">Buy 1 get 1 free</h2>
+    <h3 class="yotta">Cassettes</h3>
+  </a>
 </div>
