--- a/_patterns/banners/home-banner.html
+++ b/_patterns/banners/home-banner.html
@@ -1,6 +1,6 @@
 <div class="home-banner relative">
-  <div class="home-banner-content pin-lc">
-    <h1 class="home-banner-type">Extra 20% off sale items</h1>
+  <div class="home-banner-content pin-lc text-center">
+    <h1 class="home-banner-type tenamega">Extra 20% off sale items</h1>
     {% pattern buttons/basic %}
   </div>
 </div>
