Add the shopping cart icon next to the search form

--- a/_patterns/header/header-nav.html
+++ b/_patterns/header/header-nav.html
@@ -1,7 +1,7 @@
 <header class="">
   <nav class="header-nav wrapper relative">
     <div class="relative">
-      <ul class="list-nav list-group-inline text-center push-0 grid grid-middle">
+      <ul class="list-nav list-group text-center push-0 grid grid-middle">
         <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
           <a class="header-link icon-link" href="#"><h4 class="link push-0 tenakilo">Electronics</h4></a>
           <a class="icon-link header-icon grid grid-middle" href="#">
