--- a/_patterns/cards/shop.html
+++ b/_patterns/cards/shop.html
@@ -1,5 +1,5 @@
-<div class="grid">
-  <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3">
+<div class="grid gutter-1-4">
+  <div class="unit xs-1 s-1 m-1 l-1 xl-1">
     <div class="square-card relative">
       <a class="crop icon-link hover-box" href="#">
         <div class="embed embed-1by1">
