--- a/_patterns/forms/search-input.html
+++ b/_patterns/forms/search-input.html
@@ -1,19 +1,11 @@
-<div class="grid grid-stretch grid-middle gutter-1-4 wrapper">
+<div class="grid grid-stretch grid-middle">
   <h6 class="unit xs-1 s-1 m-1 l-1 xl-1 push-1-2 search-label">
     <label for="search">Search</label>
   </h6>
-  <div class="unit xs-2-3 s-2-3 m-2-3 l-2-3 xl-2-3 gutter-1-2 push-1-4">
+  <div class="unit xs-1 s-2-3 m-2-3 l-2-3 xl-2-3 push-1-4 gutter-1-4">
     <input class="" type="search" id="search">
   </div>
-  <div class="unit xs-1-3 s-1-3 m-1-6 l-1-6 unit-push-l-1-6 xl-1-6 pad-t-1-4">
-    <a class="icon-link" href="#">
-      <i class="icon i-48">
-        <svg><use xlink:href="/images/icons.svg#shopping-cart" /></svg>
-      </i>
-      <span>Cart</span>
-    </a>
-  </div>
-  <div class="unit xs-1 s-1-3 m-1-3 l-1-6 unit-pull-l-1-6 xl-1-6 gutter-1-2">
+  <div class="unit xs-1 s-1-3 m-1-3 l-1-3 xl-1-3 gutter-1-4">
     {% pattern buttons/search %}
   </div>
 </div>
