Format the main page items

--- a/_patterns/cards/shop.html
+++ b/_patterns/cards/shop.html
@@ -3,7 +3,7 @@
     <div class="square-card relative">
       <a class="crop icon-link hover-box" href="#">
         <div class="embed embed-1by1">
-          <img class="hover-img embed-item img-flex square-card-img" src="/images/polaroid.jpg" alt="">
+          <img class="hover-img embed-item img-flex square-card-img" src="/images/{{include.image}}" alt="">
         </div>
         <div class="square-card-content pin-cb">
           {% pattern buttons/basic %}
