Finish styling for product details page

--- a/_patterns/sections/details.html
+++ b/_patterns/sections/details.html
@@ -24,7 +24,31 @@
       </div>
     </div>
   </div>
-  <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-    <h6></h6>
+  <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 island-1-4">
+    <div class="push">
+      <h6 class="push-0">Record Player</h6>
+      <p>$99.99</p>
+    </div>
+    <div class="push">
+      <h6 class="push-0">Colour</h6>
+      <p>WHITE</p>
+    </div>
+    <div class="push">
+      <h6 class="push-0">Quantity</h6>
+      <select id="quantity" name="quantity" class="form-item form-field push-1-4">
+        <option label="SELECT"></option>
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+      </select>
+      <p class="error-message milli island-1-4 push-0 unit xs-1 s-1 m-1 l-1 xl-1 push-1-2" id="selection-error">
+        <i class="icon i-16"><svg><use xlink:href="/images/icons.svg#error" /></svg></i>
+        <span class="icon-label error-label">Please select an option from the above drop down menu</span>
+      </p>
+    </div>
+    <div class="push">
+      <h6 class="push-0">Product Description</h6>
+      <p>Listen to all of your favourite records on this Crosley Record Player.</p>
+    </div>
   </div>
 </div>
