--- a/_patterns/sections/details.html
+++ b/_patterns/sections/details.html
@@ -1,4 +1,4 @@
-<div class="grid">
+<div class="grid wrapper">
   <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
     <div class="grid">
       <div class="unit xs-1 s-1 m-1-4 l-1-4 xl-1-4">
