--- a/_patterns/banners/home-banner.html
+++ b/_patterns/banners/home-banner.html
@@ -1,6 +1,8 @@
 <div class="home-banner relative">
   <div class="home-banner-content pin-lc text-center">
     <h1 class="home-banner-type tenamega">Extra 20% off sale items</h1>
-    {% pattern buttons/basic %}
+    {% if include.button_url %}
+      {% pattern buttons/basic text="Shop Now" url="/electronics/" %}
+    {% endif %}
   </div>
 </div>
