--- a/_patterns/buttons/light.html
+++ b/_patterns/buttons/light.html
@@ -1,6 +1,6 @@
 <div class="btn-border-light">
-  <a class="btn btn-light mega" href="#">
-    <span class="mega push-r-1-4">Sign Up</span>
+  <a class="btn btn-light mega" href="{{include.url}}">
+    <span class="mega push-r-1-4">{{include.text}}</span>
     <i class="icon i-16 arrow-icon">
       <svg><use xlink:href="/images/icons.svg#right-arrow" /></svg>
     </i>
