--- a/_patterns/cards/shop.html
+++ b/_patterns/cards/shop.html
@@ -6,7 +6,7 @@
           <img class="hover-img embed-item img-flex square-card-img" src="/images/{{include.image}}" alt="">
         </div>
         <div class="square-card-content pin-cb">
-          {% pattern buttons/basic url=include.button_url text="Shop Now" url="/electronics/" %}
+          {% pattern buttons/basic text="Shop Now" url="/electronics/" %}
         </div>
       </a>
     </div>
