--- a/_patterns/cards/similar-product.html
+++ b/_patterns/cards/similar-product.html
@@ -4,7 +4,7 @@
       <div class="embed embed-2by3 relative">
         <img class="hover-img embed-item img-flex similar-card-img" src="/images/camera.jpg" alt="">
         <div class="pin-cb similar-card-content">
-          {% pattern buttons/ghost %}
+          {% pattern buttons/ghost text="Shop" url="/electronics/" %}
         </div>
       </div>
     </a>
