--- a/_patterns/buttons/ghost.html
+++ b/_patterns/buttons/ghost.html
@@ -1,3 +1,3 @@
 <div class="btn-border-ghost">
-  <a class="mega btn btn-ghost" href="#">Shop</a>
+  <a class="mega btn btn-ghost" href="{{include.url}}">{{include.text}}</a>
 </div>
