--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
 </div>
 <div class="grid wrapper">
   <div class="gutter-1-4 unit xs-1 s-1 m-1 l-1 xl-1 push-1-2">
-    {% pattern banners/home-banner %}
+    {% pattern banners/home-banner button_text="Check it out" button_url="/electronics"%}
   </div>
   <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2 push-1-2">
     {% pattern cards/product-category heading="Retro Electronics" image="retro-radio.jpg" %}
@@ -20,12 +20,12 @@ layout: default
     {% pattern cards/product-category heading="Retro Accessories" image="type-writer.jpg" %}
   </div>
   <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 push-1-2">
-    {% pattern cards/shop image="polaroid.jpg" %}
+    {% pattern cards/shop image="polaroid.jpg" button_text="Shop Polaroids" button_url="/electronics/" %}
   </div>
   <div class="unit xs-1 s-1 m-1-2 l-1-3 xl-1-3 push-1-2">
-    {% pattern cards/shop image="stereo.jpg" %}
+    {% pattern cards/shop image="stereo.jpg" button_text="Shop Stereos" button_url="/electronics/" %}
   </div>
   <div class="unit xs-1 s-1 m-1-2 l-1-3 xl-1-3 push-1-2">
-    {% pattern cards/shop image="radio.jpg" %}
+    {% pattern cards/shop image="radio.jpg" button_text="Shop Radios" button_url="/electronics/" %}
   </div>
 </div>
