--- a/products.html
+++ b/products.html
@@ -1,4 +1,17 @@
 ---
 layout: default
-highlight_nav: electronics
 ---
+<div class="grid max-length push">
+  <div class="unit xs-1 s-1 m-5-6 l-5-6 xl-5-6">
+    {% pattern forms/search-input %}
+  </div>
+  <div class="unit xs-1 s-1 m-1-6 l-1-6 xl-1-6">
+    {% pattern buttons/cart %}
+  </div>
+</div>
+<div class="grid wrapper">
+  <div class="gutter-1-4 unit xs-1 s-1 m-1 l-1 xl-1 push-1-2">
+    {% pattern banners/product-page-banner %}
+  </div>
+
+</div>
