--- a/_patterns/forms/search-input.html
+++ b/_patterns/forms/search-input.html
@@ -6,6 +6,6 @@
     <input class="" type="search" id="search">
   </div>
   <div class="unit xs-1 s-1-3 m-1-3 l-1-3 xl-1-3 gutter-1-4">
-    {% pattern buttons/search %}
+    {% pattern buttons/search text="Search" url="/electronics/" %}
   </div>
 </div>
