--- a/_patterns/forms/sign-up-input.html
+++ b/_patterns/forms/sign-up-input.html
@@ -8,6 +8,6 @@
     <span class="icon-label error-label">Please enter a valid email address</span>
   </p>
   <div class="unit xs-1 s-1 m-1 l-1 xl-1">
-    {% pattern buttons/light %}
+    {% pattern buttons/light text="Sign Up" url="/electronics/" %}
   </div>
 </div>
