--- a/_patterns/header/header-nav.html
+++ b/_patterns/header/header-nav.html
@@ -2,7 +2,7 @@
   <nav class="header-nav wrapper relative">
     <div class="relative">
       <ul class="list-nav list-group text-center push-0 grid grid-middle">
-        <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
+        <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6 {% if page.highlight_nav == 'electronics' %}current{% endif %}">
           <a class="header-link icon-link" href="#"><h4 class="link push-0 tenakilo">Electronics</h4></a>
           <a class="icon-link header-icon grid grid-middle" href="#">
             <i class="icon i-96 electronics-icon unit xs-1 s-1 m-1-2">
@@ -11,7 +11,7 @@
             <span class="left-label icon-label unit xs-1 s-1 m-1-2">Electronics</span>
           </a>
         </li>
-        <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
+        <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6 {% if page.highlight_nav == 'music' %}current{% endif %}">
           <a class="header-link icon-link" href="#"><h4 class="link push-0 tenakilo">Music</h4></a>
           <a class="icon-link header-icon grid grid-middle" href="#">
             <i class="icon i-96 music-icon unit xs-1 s-1 m-1-2 unit-push-m-1-2">
@@ -22,7 +22,7 @@
         </li>
         <li class="unit xs-1 s-1 m-1 l-1-3 xl-1-3">
         </li>
-        <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
+        <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6 {% if page.highlight_nav == 'movies' %}current{% endif %}">
           <a class="header-link icon-link" href="#"><h4 class="link push-0 tenakilo">Movies</h4></a>
           <a class="icon-link header-icon grid grid-middle" href="#">
             <i class="icon i-96 movies-icon unit xs-1 s-1 m-1-2">
@@ -31,7 +31,7 @@
             <span class="left-label icon-label unit xs-1 s-1 m-1-2">Movies</span>
           </a>
         </li>
-        <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6">
+        <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6 {% if page.highlight_nav == 'apparel' %}current{% endif %}">
           <a class="header-link icon-link" href="#"><h4 class="link push-0 tenakilo">Apparel</h4></a>
           <a class="icon-link header-icon grid grid-middle" href="#">
             <i class="icon i-96 apparel-icon unit xs-1 s-1 m-1-2 unit-push-m-1-2">
