--- a/products.html
+++ b/products.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+highlight_nav: electronics
 ---
 <div class="grid max-length push">
   <div class="unit xs-1 s-1 m-5-6 l-5-6 xl-5-6">
