Adjust the products

--- a/_patterns/cards/product.html
+++ b/_patterns/cards/product.html
@@ -2,13 +2,13 @@
   <div class="unit xs-1-2 s-1-2 m-1-3 l-1-4 xl-1-4">
     <div class="product-card">
       <a class="icon-link" href="#">
-        <img class="img-flex push-1-2 product-card-img" src="/images/product-record-player.jpg" alt="">
+        <img class="img-flex push-1-2 product-card-img" src="{{include.data.image}}" alt="">
       </a>
       <div class="product-card-content">
         <a class="icon-link" href="#">
           <dl>
-            <dt>Crosley Record Player</dt>
-            <dd class="bold">$99.00</dd>
+            <dt>{{include.data.name}}</dt>
+            <dd class="bold">${{include.data.price}}</dd>
           </dl>
         </a>
       </div>
