--- a/products.html
+++ b/products.html
@@ -16,3 +16,6 @@ highlight_nav: electronics
   </div>
 
 </div>
+{% for product in site.products %}
+  {% pattern cards/product data=product %}
+{% endfor %}
