Make changes to cards

--- a/products.html
+++ b/products.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: product
 highlight_nav: electronics
 ---
 <div class="grid max-length push">
@@ -16,6 +16,3 @@ highlight_nav: electronics
   </div>
 
 </div>
-{% for product in site.products %}
-  {% pattern cards/product data=product %}
-{% endfor %}
