--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@ layout: default
     {% pattern cards/product-category heading="Retro Accessories" image="type-writer.jpg" %}
   </div>
   <div class="unit xs-1 s-1 m-1 l-1-3 xl-1-3 push-1-2">
-    {% pattern cards/shop image="polaroid.jpg" button_text="Shop Cameras" button_url="/electronics/" %}
+    {% pattern cards/shop image="polaroid.jpg" button_text="Shop Cameras" button_url="/products/" %}
   </div>
   <div class="unit xs-1 s-1 m-1-2 l-1-3 xl-1-3 push-1-2">
-    {% pattern cards/shop image="stereo.jpg" button_text="Shop Stereos" button_url="/electronics/" %}
+    {% pattern cards/shop image="stereo.jpg" button_text="Shop Stereos" button_url="/products/" %}
   </div>
   <div class="unit xs-1 s-1 m-1-2 l-1-3 xl-1-3 push-1-2">
-    {% pattern cards/shop image="radio.jpg" button_text="Shop Radios" button_url="/electronics/" %}
+    {% pattern cards/shop image="radio.jpg" button_text="Shop Radios" button_url="/products/" %}
   </div>
 </div>
