Add more product details

--- a/_patterns/header/header-nav.html
+++ b/_patterns/header/header-nav.html
@@ -3,8 +3,8 @@
     <div class="relative">
       <ul class="list-nav list-group text-center push-0 grid grid-middle">
         <li class="unit xs-1-2 s-1-2 m-1-2 l-1-6 xl-1-6 {% if page.highlight_nav == 'electronics' %}current{% endif %}">
-          <a class="header-link icon-link" href="#"><h4 class="link push-0 tenakilo">Electronics</h4></a>
-          <a class="icon-link header-icon grid grid-middle" href="#">
+          <a class="header-link icon-link" href="/products/"><h4 class="link push-0 tenakilo">Electronics</h4></a>
+          <a class="icon-link header-icon grid grid-middle" href="/products/">
             <i class="icon i-96 electronics-icon unit xs-1 s-1 m-1-2">
               <svg><use xlink:href="/images/icons.svg#electronics" /></svg>
             </i>
