Add accessibility features to links

--- a/_patterns/buttons/cart.html
+++ b/_patterns/buttons/cart.html
@@ -1,5 +1,5 @@
 <div class="unit xs-1 s-1 m-1 l-1 xl-1">
-  <a class="icon-link" href="#">
+  <a class="icon-link" href="#" aria-label="Navigate to your cart">
     <i class="icon i-48">
       <svg><use xlink:href="/images/icons.svg#shopping-cart" /></svg>
     </i>
