--- a/_patterns/buttons/search.html
+++ b/_patterns/buttons/search.html
@@ -1,5 +1,5 @@
 <div class="btn-border-light">
-  <a class="mega btn btn-light" href="{{include.url}}">
+  <a class="mega btn btn-light" href="{{include.url}}" aria-label="Search for a specific item">
     {{include.text}}
   </a>
 </div>
