--- a/_patterns/cards/product.html
+++ b/_patterns/cards/product.html
@@ -1,11 +1,11 @@
 <div class="grid">
   <div class="unit xs-1-2 s-1-2 m-1-3 l-1-4 xl-1-4">
     <div class="product-card">
-      <a class="icon-link" href="#">
-        <img class="img-flex push-1-2 product-card-img" src="{{include.data.image}}" alt="">
+      <a class="icon-link" href="#" aria-label="Navigate to product details page">
+        <img class="img-flex push-1-2 product-card-img" src="{{include.data.image}}" alt="Image of advertised electronic">
       </a>
       <div class="product-card-content">
-        <a class="icon-link" href="#">
+        <a class="icon-link" href="" aria-label="Navigate to product details page">
           <dl>
             <dt>{{include.data.name}}</dt>
             <dd class="bold">${{include.data.price}}</dd>
