--- a/_patterns/buttons/basic.html
+++ b/_patterns/buttons/basic.html
@@ -1,3 +1,3 @@
 <div class="btn-border">
-  <a class="btn milli" href="{{include.url}}">{{include.text}}</a>
+  <a class="btn milli" href="{{include.url}}" aria-label="Navigate to Electronics page">{{include.text}}</a>
 </div>
