--- a/_patterns/cards/product-category.html
+++ b/_patterns/cards/product-category.html
@@ -2,7 +2,7 @@
   <div class="card unit xs-1 s-1 m-1 l-1 xl-1">
     <a class="crop hover-box icon-link" href="#">
       <div class="embed embed-golden relative">
-        <img class="embed-item hover-img img-flex card-img" src="/images/{{include.image}}" alt="">
+        <img class="embed-item hover-img img-flex card-img" src="/images/{{include.image}}" alt="Image of advertised electronic">
         <div class="card-img-content pin-lc">
           <h4 class="tena">{{include.heading}}</h4>
         </div>
