--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -3,21 +3,21 @@
     <ul class="list-group grid">
       <div class="unit xs-1-2 s-1-4 m-1-3 l-1-4 xl-1-4 gutter-1-2 push-2">
         <li class="">
-          <a class="footer-link icon-link" href="#">About</a>
+          <a class="footer-link icon-link" href="#" aria-label="Navigate to the About page">About</a>
         </li>
         <li class="">
-          <a class="footer-link icon-link" href="#">Contact</a>
+          <a class="footer-link icon-link" href="#" aria-label="Navigate to the Contact page">Contact</a>
         </li>
         <li class="">
-          <a class="footer-link icon-link" href="#">Shipping/Returns</a>
+          <a class="footer-link icon-link" href="#" aria-label="Navigate to the Shipping/Returns page">Shipping/Returns</a>
         </li>
       </div>
       <div class="unit xs-1-2 s-1-4 m-1-3 l-1-4 xl-1-4 gutter-1-2 push-2">
         <li class="">
-          <a class="footer-link icon-link" href="#">Careers</a>
+          <a class="footer-link icon-link" href="#" aria-label="Navigate to the Careers page">Careers</a>
         </li>
         <li class="">
-          <a class="footer-link icon-link" href="#">Privacy</a>
+          <a class="footer-link icon-link" href="#" aria-label="Navigate to the Privacy page">Privacy</a>
         </li>
       </div>
       <div class="unit xs-1 s-1 m-1-3 l-1-4 xl-1-4 gutter-1-2 push-2">
@@ -31,21 +31,21 @@
         </li>
         <div class="list-group-inline">
           <li class="">
-            <a class="icon-link" href="#">
+            <a class="icon-link" href="#" aria-label="Navigate to the company Facebook page">
               <i class="icon i-48 facebook-icon">
                 <svg><use xlink:href="/images/icons.svg#facebook-social" /></svg>
               </i>
             </a>
           </li>
           <li class="">
-            <a class="icon-link island" href="#">
+            <a class="icon-link island" href="#" aria-label="Navigate to the company Twitter page">
               <i class="icon i-48 twitter-icon">
                 <svg><use xlink:href="/images/icons.svg#twitter-social" /></svg>
               </i>
             </a>
           </li>
           <li class="">
-            <a class="icon-link" href="#">
+            <a class="icon-link" href="#" aria-label="Navigate to the company Instagram page">
               <i class="icon i-48 instagram-icon">
                 <svg><use xlink:href="/images/icons.svg#instagram-social" /></svg>
               </i>
