Add accessibility to more links

--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -1,4 +1,4 @@
-<footer class="">
+<footer role="contentinfo">
   <nav class="footer-nav wrapper pad-t">
     <ul class="list-group grid">
       <div class="unit xs-1-2 s-1-4 m-1-3 l-1-4 xl-1-4 gutter-1-2 push-2">
