--- a/_patterns/navigation/page-nav.html
+++ b/_patterns/navigation/page-nav.html
@@ -1,39 +1,39 @@
-<nav class="">
+<nav role="navigation">
   <ol class="list-group-inline">
     <li class="push-r">
-      <a class="icon-link" href="#">
+      <a class="icon-link" href="#" aria-label="Navigate to the next page of products">
         <i class="icon i-20 arrow-icon left-arrow">
           <svg><use xlink:href="/images/icons.svg#left-arrow" /></svg>
         </i>
       </a>
     </li>
     <li class="push-r">
-      <a class="page-number-link icon-link" href="#">
+      <a class="page-number-link icon-link" href="#" aria-label="Navigate to page 1 of products">
         <span class="icon-label">1</span>
       </a>
     </li>
     <li class="push-r">
-      <a class="page-number-link icon-link" href="#">
+      <a class="page-number-link icon-link" href="#" aria-label="Navigate to page 2 of products">
         <span class="icon-label">2</span>
       </a>
     </li>
     <li class="push-r">
-      <a class="page-number-link icon-link" href="#">
+      <a class="page-number-link icon-link" href="#" aria-label="Navigate to page 3 of products">
         <span class="icon-label">3</span>
       </a>
     </li>
     <li class="push-r">
-      <a class="page-number-link icon-link" href="#">
+      <a class="page-number-link icon-link" href="#" aria-label="Navigate to page 4 of products">
         <span class="icon-label">4</span>
       </a>
     </li>
     <li class="push-r">
-      <a class="page-number-link icon-link" href="#">
+      <a class="page-number-link icon-link" href="#" aria-label="Navigate to page 5 of products">
         <span class="icon-label">5</span>
       </a>
     </li>
     <li class="">
-      <a class="icon-link" href="#">
+      <a class="icon-link" href="#" aria-label="Navigate to the previous page of products">
         <i class="icon i-20 arrow-icon right-arrow">
           <svg><use xlink:href="/images/icons.svg#right-arrow" /></svg>
         </i>
