--- a/_patterns/navigation/section-nav.html
+++ b/_patterns/navigation/section-nav.html
@@ -1,25 +1,25 @@
-<nav class="grid category-nav">
+<nav class="grid category-nav" role="navigation">
   <ol class="unit xs-1 s-1 m-1-3 l-1-4 xl-1-4 list-group">
     <li class="push-1-2">
-      <a class="icon-link text-upper" href="#"><h6 class="push-0">Electronics</h6></a>
+      <a class="icon-link text-upper" href="#" aria-label="Navigate to the electronics page"><h6 class="push-0">Electronics</h6></a>
     </li>
     <li class="push-1-2">
-      <a class="section-link icon-link text-upper" href="#">CD Players</a>
+      <a class="section-link icon-link text-upper" href="#" aria-label="Navigate to the CD Players page">CD Players</a>
     </li>
     <li class="push-1-2">
-      <a class="section-link icon-link text-upper" href="#">Record Players</a>
+      <a class="section-link icon-link text-upper" href="#" aria-label="Navigate to the Record Players page">Record Players</a>
     </li>
     <li class="push-1-4">
-      <a class="section-link icon-link text-upper" href="#">Cassette Players</a>
+      <a class="section-link icon-link text-upper" href="#" aria-label="Navigate to the Cassette Players page">Cassette Players</a>
     </li>
     <li class="push-1-2">
-      <a class="section-link icon-link text-upper" href="#">Stereos</a>
+      <a class="section-link icon-link text-upper" href="#" aria-label="Navigate to the Stereos page">Stereos</a>
     </li>
     <li class="push-1-2">
-      <a class="section-link icon-link text-upper" href="#">Polaroid Cameras</a>
+      <a class="section-link icon-link text-upper" href="#" aria-label="Navigate to the Polaroid Cameras page">Polaroid Cameras</a>
     </li>
     <li class="push-1-2">
-      <a class="section-link icon-link text-upper" href="#">Film Cameras</a>
+      <a class="section-link icon-link text-upper" href="#" aria-label="Navigate to the Film Cameras page">Film Cameras</a>
     </li>
   </ol>
 </nav>
