--- a/_patterns/banners/product-page-banner.html
+++ b/_patterns/banners/product-page-banner.html
@@ -1,6 +1,6 @@
 <div class="product-banner relative">
-  <img class="img-flex banner-img" src="/images/product-page-banner.jpg" alt="">
-  <a class="product-banner-content pin-cb text-center icon-link" href="#">
+  <img class="img-flex banner-img" src="/images/product-page-banner.jpg" alt="Image of retro items on a table" role="presentation">
+  <a class="product-banner-content pin-cb text-center icon-link" href="#" aria-label="Navigate to the promotion page page">
     <h2 class="tenamega push-0">Buy 1 get 1 free</h2>
     <h3 class="yotta">Cassettes</h3>
   </a>
