Alter class names

--- a/_patterns/header/header-nav.html
+++ b/_patterns/header/header-nav.html
@@ -1,4 +1,4 @@
-<header role="banner">
+<header role="banner" class="header">
   <nav class="header-nav wrapper relative" role="navigation">
     <div class="relative">
       <ul class="list-nav list-group text-center push-0 grid grid-middle">
