--- a/_patterns/sections/details.html
+++ b/_patterns/sections/details.html
@@ -50,5 +50,8 @@
       <h6 class="push-0">Product Description</h6>
       <p>Listen to all of your favourite records on this Crosley Record Player.</p>
     </div>
+    <div class="">
+      {% pattern buttons/ghost text="Add to Cart" url="/electronics/" %}
+    </div>
   </div>
 </div>
