--- a/_patterns/cards/shop.html
+++ b/_patterns/cards/shop.html
@@ -6,7 +6,9 @@
           <img class="hover-img embed-item img-flex square-card-img" src="/images/{{include.image}}" alt="Image of advertised item">
         </div>
         <div class="square-card-content pin-cb">
-          {% pattern buttons/basic text=include.button_text url=include.button_url %}
+          {% if include.button_url %}
+            {% pattern buttons/basic url=include.button_url text=include.button_text %}
+          {% endif %}
         </div>
       </a>
     </div>
