Adjust product list page

--- a/products.html
+++ b/products.html
@@ -14,11 +14,15 @@ highlight_nav: electronics
   <div class="gutter-1-4 unit xs-1 s-1 m-1 l-1 xl-1 push-1-2">
     {% pattern banners/product-page-banner %}
   </div>
-  <div class="unit">
+  <div class="unit xs-1 s-1 m-1 l-1 xl-1 text-right gutter-1-4">
+    {% pattern navigation/page-nav %}
+  </div>
+  <div class="unit xs-1 s-1 m-1-3 l-1-4 xl-1-4 gutter-1-4">
     {% pattern navigation/section-nav %}
   </div>
   {% for product in site.products %}
-    {% pattern cards/product data=product %}
+    <div class="unit [ xs-1-2 s-1-2 m-1-3 l-1-4 xl-1-4] grid-middle">
+      {% pattern cards/product data=product %}
+    </div>
   {% endfor %}
-
 </div>
