--- a/_patterns/navigation/section-nav.html
+++ b/_patterns/navigation/section-nav.html
@@ -1,5 +1,5 @@
 <nav class="grid category-nav" role="navigation">
-  <ol class="unit xs-1 s-1 m-1-3 l-1-4 xl-1-4 list-group">
+  <ol class="unit list-group">
     <li class="push-1-2">
       <a class="icon-link text-upper" href="#" aria-label="Navigate to the electronics page"><h6 class="push-0">Electronics</h6></a>
     </li>
