--- a/products.html
+++ b/products.html
@@ -11,18 +11,29 @@ highlight_nav: electronics
   </div>
 </div>
 <div class="grid wrapper">
-  <div class="gutter-1-4 unit xs-1 s-1 m-1 l-1 xl-1 push-1-2">
+  <div class="gutter-1-4 unit xs-1 s-1 m-1 l-1 xl-1 push">
     {% pattern banners/product-page-banner %}
   </div>
   <div class="unit xs-1 s-1 m-1 l-1 xl-1 text-right gutter-1-4">
     {% pattern navigation/page-nav %}
   </div>
-  <div class="unit xs-1 s-1 m-1-3 l-1-4 xl-1-4 gutter-1-4">
-    {% pattern navigation/section-nav %}
-  </div>
-  {% for product in site.products %}
-    <div class="unit [ xs-1-2 s-1-2 m-1-3 l-1-4 xl-1-4] grid-middle">
-      {% pattern cards/product data=product %}
+  <div class="unit xs-1 s-1 m-1-3 l-1-4 xl-1-4">
+    <div class="grid">
+      <div class="unit gutter-1-4">
+        {% pattern navigation/section-nav %}
+      </div>
     </div>
-  {% endfor %}
+  </div>
+  <div class="unit xs-1 s-1 m-2-3 l-3-4 xl-3-4 gutter-1-4">
+    <div class="grid">
+      {% for product in site.products %}
+        <div class="unit [ xs-1-2 s-1-2 m-1-3 l-1-4 xl-1-4] island-1-4">
+          {% pattern cards/product data=product %}
+        </div>
+      {% endfor %}
+    </div>
+  </div>
+  <div class="unit xs-1 s-1 m-1 l-1 xl-1 text-right gutter-1-4">
+    {% pattern navigation/page-nav %}
+  </div>
 </div>
