--- a/_patterns/sections/details.html
+++ b/_patterns/sections/details.html
@@ -1,4 +1,19 @@
 <div class="grid wrapper">
+  <ol class="unit xs-1 s-1 m-1 l-1 xl-1 list-group-inline">
+    <li class="push-r">
+      <a class="icon-link" href="#" aria-label="Navigate back to the products list page">
+        <i class="icon i-20 arrow-icon left-arrow">
+          <svg><use xlink:href="/images/icons.svg#left-arrow" /></svg>
+        </i>
+      </a>
+    </li>
+    <li class="push-r">
+      <a class="page-number-link icon-link" href="#" aria-label="Navigate back to the products list page">
+        <span class="icon-label">BACK</span>
+      </a>
+    </li>
+  </ol>
+  <h1 class="text-center unit xs-1 s-1 m-1 l-1 xl-1 tena">Crosley Record Player</h1>
   <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
     <div class="grid">
       <div class="unit xs-1 s-1 m-1-4 l-1-4 xl-1-4">
