--- a/product-details.html
+++ b/product-details.html
@@ -11,6 +11,9 @@ layout: default
   <div class="unit xs-1 s-1 m-1 l-1 xl-1 ">
   {% pattern sections/details %}
 
+  {% pattern sections/subheadings text="Similar Products" %}
+
+
   {% pattern cards/similar-product %}
   {% pattern cards/similar-product %}
   {% pattern cards/similar-product %}
